# coolgame

./: .gitignore  Dockerfile  Jenkinsfile  README.md  casc.yaml  config.xml  plugins.txt
game/src/: CMakeLists.txt  main.cpp
game/src/common/: CMakeLists.txt
game/src/test/: test_GameObject.cpp
